@@ -5,7 +5,6 @@ import de.niclasl.playerManagementCore.PlayerManagementCore;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.NamespacedKey;
-import org.bukkit.OfflinePlayer;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
@@ -26,32 +25,50 @@ public record LevelListener(PlayerManagementCore plugin) implements Listener {
 
         String title = e.getView().getTitle();
         if (!title.startsWith("§aSelect Level ")) return;
+
         e.setCancelled(true);
 
-        if (!viewer.hasMetadata("level_target") || !viewer.hasMetadata("level_page") || !viewer.hasMetadata("level_ench")) return;
+        if (!viewer.hasMetadata("level_target")
+                || !viewer.hasMetadata("level_page")
+                || !viewer.hasMetadata("level_ench")) return;
 
-        OfflinePlayer target = Bukkit.getOfflinePlayer(UUID.fromString(viewer.getMetadata("level_target").getFirst().asString()));
+        Player target = Bukkit.getPlayer(UUID.fromString(
+                viewer.getMetadata("level_target").getFirst().asString()
+        ));
+
+        if (target == null) {
+            viewer.sendMessage("§cTarget player is offline!");
+            return;
+        }
+
         int page = viewer.getMetadata("level_page").getFirst().asInt();
-        Enchantment ench = Enchantment.getByKey(NamespacedKey.minecraft(viewer.getMetadata("level_ench").getFirst().asString()));
+
+        Enchantment ench = Enchantment.getByKey(
+                NamespacedKey.minecraft(
+                        viewer.getMetadata("level_ench").getFirst().asString()
+                )
+        );
+
+        if (ench == null) {
+            viewer.sendMessage("§cInvalid enchantment!");
+            return;
+        }
 
         int slot = e.getSlot();
-        int totalLevels;
-        if (viewer.isOp()) {
-            totalLevels = 255;
-        } else {
-            assert ench != null;
-            totalLevels = ench.getMaxLevel();
-        }
+
+        int totalLevels = viewer.isOp() ? 255 : ench.getMaxLevel();
+
         int itemsPerPage = GuiConstants.ALLOWED_SLOTS_1.length;
         int totalPages = (int) Math.ceil(totalLevels / (double) itemsPerPage);
         if (totalPages == 0) totalPages = 1;
 
-        page = Math.min(Math.max(page, 1), totalPages);
+        page = Math.clamp(page, 1, totalPages);
 
         if (slot == 45 && page > 1) {
             plugin.getLevelGUI().open(viewer, target, ench, page - 1);
             return;
         }
+
         if (slot == 53 && page < totalPages) {
             plugin.getLevelGUI().open(viewer, target, ench, page + 1);
             return;
@@ -59,37 +76,49 @@ public record LevelListener(PlayerManagementCore plugin) implements Listener {
 
         ItemStack clicked = e.getCurrentItem();
         if (clicked == null || !clicked.hasItemMeta()) return;
-        String name = ChatColor.stripColor(Objects.requireNonNull(clicked.getItemMeta()).getDisplayName());
+
+        String name = ChatColor.stripColor(
+                Objects.requireNonNull(clicked.getItemMeta()).getDisplayName()
+        );
 
         if (name.startsWith("Level ")) {
             int level = Integer.parseInt(name.replace("Level ", ""));
+
             viewer.setMetadata("chosen_level", new FixedMetadataValue(plugin, level));
-            int xpCost = viewer.isOp() ? 0 : getXpCost(level);
+
+            int xpCost = target.isOp() ? 0 : getXpCost(level);
+
             viewer.sendMessage("§aLevel §e" + level + "§a selected! §7(Cost: §e" + xpCost + " XP§7)");
             return;
         }
 
         if (name.equalsIgnoreCase("Confirm")) {
+
             if (!viewer.hasMetadata("chosen_level")) {
                 viewer.sendMessage("§cPlease select a level first!");
                 return;
             }
 
             int level = viewer.getMetadata("chosen_level").getFirst().asInt();
-            int xpCost = viewer.isOp() ? 0 : getXpCost(level);
+            int xpCost = target.isOp() ? 0 : getXpCost(level);
 
-            if (!viewer.isOp() && viewer.getLevel() < xpCost) {
-                viewer.sendMessage("§cYou need §e" + xpCost + " Levels §cto apply this enchantment!");
+            if (!target.isOp() && target.getLevel() < xpCost) {
+                viewer.sendMessage("§cTarget needs §e" + xpCost + " Levels §cto apply this enchantment!");
                 return;
             }
 
-            if (!viewer.isOp()) viewer.setLevel(viewer.getLevel() - xpCost);
-
-            if (target.getPlayer() != null && target.getPlayer().isOnline()) {
-                assert ench != null;
-                target.getPlayer().getInventory().getItemInMainHand().addUnsafeEnchantment(ench, level);
-                viewer.sendMessage("§aApplied §e" + ench.getKeyOrThrow().getKey() + "§a level §e" + level + " §ato " + target.getName());
+            if (!target.isOp()) {
+                target.setLevel(target.getLevel() - xpCost);
             }
+
+            target.getInventory()
+                    .getItemInMainHand()
+                    .addUnsafeEnchantment(ench, level);
+
+            viewer.sendMessage("§aApplied §e"
+                    + ench.getKeyOrThrow().getKey()
+                    + "§a level §e" + level
+                    + " §ato " + target.getName());
 
             viewer.closeInventory();
         }
