@@ -42,7 +42,7 @@ public record CraftedItemsGui(PlayerManagementCore plugin) {
         int craftedItemsPerPage = allowedSlots.length;
         int totalPages = (int) Math.ceil(craftedItems.size() / (double) craftedItemsPerPage);
         if (totalPages == 0) totalPages = 1;
-        page = Math.min(Math.max(page, 1), totalPages);
+        page = Math.clamp(page, 1, totalPages);
 
         Inventory gui = Bukkit.createInventory(null, 54, "§9Crafted Items: " + target.getName() + " §7(" + page + "/" + totalPages + ")");
 
