@@ -45,7 +45,7 @@ public record UsedItemsGui(PlayerManagementCore plugin) {
         int usedItemsPerPage = allowedSlots.length;
         int totalPages = (int) Math.ceil(usedItems.size() / (double) usedItemsPerPage);
         if (totalPages == 0) totalPages = 1;
-        page = Math.min(Math.max(page, 1), totalPages);
+        page = Math.clamp(page, 1, totalPages);
 
         Inventory gui = Bukkit.createInventory(null, 54, "§9Used Items: " + target.getName() + " §7(" + page + "/" + totalPages + ")");
 
